--- a/關於我們.html
+++ b/關於我們.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="noindex, follow" />
+  <link rel="canonical" href="https://prismarkstudio.site/" />
   <title>棱銘｜Zynvrae ｜關於我們</title>
   <style>
+    /* ...原本的 CSS 不變... */
+
     * {
       box-sizing: border-box;
     }
