--- a/隱私權.html
+++ b/隱私權.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>棱銘｜Zynvrae｜隱私權政策</title>
+
+  <!-- 防止此頁被索引，但允許追蹤連結 -->
+  <meta name="robots" content="noindex, follow" />
+
+  <!-- 告訴搜尋引擎首頁才是主頁 -->
+  <link rel="canonical" href="https://prismarkstudio.site/" />
+
   <style>
     body {
       font-family: 'Noto Sans TC', sans-serif;
@@ -28,8 +35,6 @@
       color: #666;
     }
   </style>
-<link rel="canonical" href="https://prismarkstudio.site/" />
-
 </head>
 <body>
   <h1>隱私權政策</h1>
