--- a/工作人員名單.html
+++ b/工作人員名單.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>棱銘｜Zynvrae｜招募與團隊資訊</title>
+
+  <!-- 防止這頁被 Google 編入索引，但仍允許追蹤頁面內連結 -->
+  <meta name="robots" content="noindex, follow" />
+
+  <!-- 告訴搜尋引擎主網址是首頁 -->
+  <link rel="canonical" href="https://prismarkstudio.site/" />
+
+  <!-- 字體與樣式 -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     body {
       background-color: #f9fafb;
@@ -55,10 +64,6 @@
       text-decoration: underline;
     }
   </style>
-  <link rel="canonical" href="https://prismarkstudio.site/" />
-  <meta name="robots" content="noindex, nofollow" />
-
-
 </head>
 <body>
   <div class="container">
