--- a/贊助名單及金額.html
+++ b/贊助名單及金額.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-Hant">
 <head>
-    <link rel="stylesheet" type="text/css" href="贊助名單.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>棱銘｜Zynvrae｜贊助名單</title>
 
-    <meta charset="UTF-8" />
-    <title>棱銘｜Zynvrae｜贊助名單</title>
+  <!-- 防止這頁被索引，但允許追蹤連結 -->
+  <meta name="robots" content="noindex, follow" />
 
-</head>   
-    <!-- 贊助名單 區塊標題 -->
+  <!-- 告訴搜尋引擎主頁才是主網址 -->
+  <link rel="canonical" href="https://prismarkstudio.site/" />
 
-<!-- 贊助名單內容 -->
-<div class="donation-list">
-  <div class="donor">
-    <span class="donor-name">友情贊助：</span>
-    <span class="donor-info"><a href="https://www.instagram.com/ccgdk.__.c?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" targrt="_blank">孫康康</a> - NT$4000</span>
-  </div>
-</div>
-<link rel="canonical" href="https://prismarkstudio.site/" />
-
+  <!-- 外部樣式 -->
+  <link rel="stylesheet" type="text/css" href="贊助名單.css" />
 </head>
 <body>
-    
+
+  <!-- 贊助名單內容 -->
+  <div class="donation-list">
+    <div class="donor">
+      <span class="donor-name">友情贊助：</span>
+      <span class="donor-info">
+        <a href="https://www.instagram.com/ccgdk.__.c?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">孫康康</a> - NT$4000
+      </span>
+    </div>
+  </div>
+
 </body>
 </html>
