--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>棱銘｜Zynvrae — 遊戲開發與網頁創作的獨立品牌</title>
+  <meta name="robots" content="noindex">
+
 
   <!-- SEO Meta -->
   <meta name="description" content="棱銘｜Zynvrae 是由台灣創作者洪孝銘創立的獨立品牌，專注於模擬遊戲開發、互動網頁與數位敘事，融合文化底蘊與創新精神。" />
