--- a/工作人員名單.html
+++ b/工作人員名單.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>棱銘｜Zynvrae｜招募與團隊資訊</title>
+  <meta name="robots" content="noindex">
+
 
   <!-- 防止這頁被 Google 編入索引，但仍允許追蹤頁面內連結 -->
   <meta name="robots" content="noindex, follow" />
