--- a/關於我們.html
+++ b/關於我們.html
@@ -6,6 +6,8 @@
   <meta name="robots" content="noindex, follow" />
   <link rel="canonical" href="https://prismarkstudio.site/" />
   <title>棱銘｜Zynvrae ｜關於我們</title>
+  <meta name="robots" content="noindex">
+
   <style>
     /* ...原本的 CSS 不變... */
 
