--- a/隱私權.html
+++ b/隱私權.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>棱銘｜Zynvrae｜隱私權政策</title>
+  <meta name="robots" content="noindex">
+
 
   <!-- 防止此頁被索引，但允許追蹤連結 -->
   <meta name="robots" content="noindex, follow" />
