--- a/工作人員名單.html
+++ b/工作人員名單.html
@@ -3,10 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>棱銘｜Zynvrae｜招募與團隊資訊</title>
-  <meta name="robots" content="noindex">
 
-
-  <!-- 防止這頁被 Google 編入索引，但仍允許追蹤頁面內連結 -->
+  <!-- 告訴搜尋引擎不要將此頁編入索引，但允許追蹤內部連結 -->
   <meta name="robots" content="noindex, follow" />
 
   <!-- 告訴搜尋引擎主網址是首頁 -->
@@ -123,7 +121,6 @@
         <div class="role-label">行銷 / 社群管理：</div>
         <div class="role-value"><a class="contact-link" href="https://www.instagram.com/prismarkstudio/" target="_blank">意者請透過 Instagram 聯繫我們</a></div>
       </div>
-
     </div>
   </div>
 </body>
