--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>棱銘｜Zynvrae — 遊戲開發與網頁創作的獨立品牌</title>
+  <title>棱銘｜Zynvrae</title>
 
 
   <!-- SEO Meta -->
