--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="棱銘｜Zynvrae — 遊戲開發與網頁創作的獨立品牌" />
-  <meta name="twitter:description" content="由洪孝銘創立的品牌，致力於模擬遊戲、文化敘事與互動設計，連結真實與創意。" />
+  <meta name="twitter:description" content="致力於模擬遊戲、文化敘事與互動設計，連結真實與創意。" />
   <meta name="twitter:image" content="https://prismarkstudio.site/og-image.jpg" />
 
   <!-- Google Fonts -->
