--- a/Zynvrae/index.html
+++ b/Zynvrae/index.html
@@ -15,7 +15,7 @@
 
   <!-- Open Graph (Facebook) -->
   <meta property="og:title" content="棱銘｜Zynvrae — 遊戲開發與網頁創作的獨立品牌" />
-  <meta property="og:description" content="專注於模擬遊戲與文化網頁創作的數位品牌，融合創新與情感，打造有深度的互動體驗。" />
+  <meta property="og:description" content="專注於模擬遊戲創作的數位品牌，融合創新與情感，打造有深度的互動體驗。" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://prismarkstudio.site/" />
   <meta property="og:image" content="https://prismarkstudio.site/og-image.jpg" />
@@ -83,7 +83,7 @@
   </script>
 
   <header>
-    <h1 class="title">棱銘｜Zynvrae</h1>
+    <h1 class="title">Zynvrae</h1>
     <p class="subtitle">創造深刻體驗的模擬遊戲開發者</p>
   </header>
 
